# prod-eng

./: .gitignore  Makefile  conf.py  index.rst  requirements.txt
.github/workflows/: publish-gh-pages.yml
chapters/01-foundations/: code-quality.rst  dependency-management.rst  fastapi-app.rst  git-workflow.rst  intro.rst  pre-commit.rst  project-structure.rst
chapters/01-foundations/support/: .pre-commit-config.yaml
chapters/01-foundations/support/bookshelf-solution/: .gitignore  README.md  pyproject.toml
chapters/01-foundations/support/bookshelf-solution/src/bookshelf/: database.py  main.py  models.py
chapters/01-foundations/support/bookshelf-starter/: pyproject.toml
chapters/01-foundations/support/bookshelf-starter/src/bookshelf/: database.py  main.py  models.py
chapters/02-tdd/: fixtures.rst  parametrize.rst  pytest-basics.rst  tdd-cycle.rst  test-organization.rst  testable-code.rst  why-tdd.rst
chapters/02-tdd/support/bookshelf-ch2-solution/: pyproject.toml
chapters/02-tdd/support/bookshelf-ch2-solution/src/bookshelf/: database.py  services.py
chapters/02-tdd/support/bookshelf-ch2-solution/src/bookshelf/routers/: reviews.py
chapters/02-tdd/support/bookshelf-ch2-solution/tests/: conftest.py
chapters/02-tdd/support/bookshelf-ch2-solution/tests/unit/: test_models.py  test_services.py  test_validation.py
chapters/02-tdd/support/bookshelf-ch2/src/bookshelf/: services.py
chapters/02-tdd/support/bookshelf-ch2/tests/: conftest.py
chapters/02-tdd/support/bookshelf-ch2/tests/unit/: test_models.py  (+2 more)
docker/: Dockerfile  docker-compose.yml
(+7 files in other folders)
